Update Graphy to last version on Assets Store, Update to Unity 2017.4.8f1

--- a/Assets/Utils/Tayx/Graphy - Ultimate Stats Monitor/Changelog.txt
+++ b/Assets/Utils/Tayx/Graphy - Ultimate Stats Monitor/Changelog.txt
@@ -1,4 +1,11 @@
 -----------------------------
+v1.3
+
+- Added a second graph to the Audio module that shows the highest spectrum value.
+- Added option to Toggle Active and Mode, as well as setting a specific Preset from the API.
+- Fixed a bug that occured when Time.timeScale = 0 (thanks @xDavidLeon!).
+
+-----------------------------
 v1.2.2
 
 - Improved the dB calculations, now the values are much more precise.
